- implemented datamatrix update method, returning JSON to datatables - fixed minor layout issues

--- a/web-app/css/parseConfiguration.css
+++ b/web-app/css/parseConfiguration.css
@@ -5,7 +5,7 @@ body {
 
 .parseConfigDialog {
     width: 100%;
-    height: 250px;
+    height: 300px;
 }
 
 #configInfo {
@@ -64,7 +64,7 @@ body {
 
 .datamatrix {
     width: 100%;
-    height: 100px;
+    height: 190px;
     border: 1px;
     border-style: dotted;
     border-color: #dddddd;
@@ -74,8 +74,13 @@ body {
 }
 
 .statistics {
+    clear:both;
+    padding: 0;
+    margin: 0;
     width: 100%;
     border: 1px;
+    border-style: dotted;
+    border-color: #dddddd;
     margin-top: 20px;
     float: left;
 }
